--- a/my-app/src/components/css/Sidebar.module.css
+++ b/my-app/src/components/css/Sidebar.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     padding: 10px 0;
     text-align: left;
-    padding-left: 40px
+    padding-left: 40px;
 }
 
 .sidebar > a {
@@ -17,7 +17,7 @@
     margin-left: 30px;
 }
 
-.sidebar > a:hover{
+.sidebar > a:hover {
     color: #445261;
     background-color: #e6ecf0;
     border: white solid 1px;
