--- a/my-app/src/components/css/Content.module.css
+++ b/my-app/src/components/css/Content.module.css
@@ -6,7 +6,12 @@
     background-color: white;
     max-width: 80%;
     box-shadow: 0px 10px 30px rgb(238, 238, 238);
+}
 
+.PostImage {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
 
 .Content {
@@ -16,7 +21,7 @@
     padding-right: 60px;
 }
 
-.Content h1{
+.Content h1 {
     color: #4a4a4f;
     font-size: 20px;
     text-align: left;
@@ -26,28 +31,27 @@
     margin-top: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-
 }
 
-.TitleBar form{
-    text-align:right;
+.TitleBar form {
+    text-align: right;
     font-family: montserrat;
     color: #4a4a4f;
 }
 
-.TitleBar form input{
+.TitleBar form input {
     border: 1px solid lightgrey;
     margin-left: 10px;
     margin-bottom: 7px;
 }
 
-.TitleBar h1{
+.TitleBar h1 {
     margin-top: 0;
 }
 
 .Content h4 {
     font-size: 14px;
-    color: #009FE3;
+    color: #009fe3;
     text-align: right;
     margin-top: 0;
 }
